--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,238 @@
-@import url('https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&family=Major+Mono+Display&display=swap');
+
+:root {
+    --code: 'Major Mono Display', monospace;
+    --clean: 'Inconsolata', monospace;
+    --white: #F9EDD4;
+    --dirt: #000000;
+    --greydirt: #C0C1BB;
+    --black: #000000;
+    --blackdirt: #252421;
+    --blue: #018CC3;
+    --green: #88B83C;
+    --yellow: #FDE601;
+    --orange: #F6781D;
+    --pink: #F53F8B;
+    --red: #ff3434;
+}
 
 html {
-    background: url("/images/gustavo_dore_satan.jpeg") no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+    overflow-x: hidden;
+    max-width: 1920px;
 }
 
-body {
-    background-color: rgba(0, 0, 0, 0.4);
+* {
+    font-family: var(--code);
+    color: whitesmoke;
 }
 
-h1 {
+.page-wrapper {
+    background-color: black;
+}
+
+#intro-content {
+    background: radial-gradient(var(--blackdirt), var(--black));
+    position: relative;
+    width: 100vw;
+    min-height: 100vh;
+    padding: 50px;
+}
+
+.hero-container {
+    min-width: 50vw;
+}
+
+.logo {
+    font-family: var(--code);
+    font-weight: normal;
+    font-size: 10rem;
+    line-height: 0.25;
+    padding-bottom: 20px;
+}
+
+#logo-sub {
+    font-size: 3rem;
+    margin-top: 13%;
+}
+
+.content {
+    font-family: var(--code);
+    color: black;
+    font-size: 3rem;
+    text-shadow: white 2px 2px 10px;
+}
+
+#logo-container {
+    margin-top: 30vh;
+    max-height: 100px;
+}
+
+#slogan {
+    font-family: var(--code);
     color: white;
-    font-family: 'Metal Mania', cursive;
-    text-shadow: black 5px 5px 4px;
+    font-size: 2rem;
+    max-width: 30vw;
+    text-align: left;
 }
+
+#call-action {
+    min-width: 100%;
+}
+
+#menu {
+    max-width: 55vw;
+}
+
+#menu button {
+    margin: 0 10px;
+    font-size: 1.5rem;
+    padding: 10px 15px;
+    text-align: center;
+    line-height: 1;
+    width: 25%;
+}
+
+.button-49,
+.button-49:after {
+   background: linear-gradient(45deg, transparent 5%, rgba(35, 35, 35, 0.42) 5%);
+   border: 0;
+   color: #fff;
+   letter-spacing: 3px;
+   box-shadow: 6px 0px 0px #00E6F6;
+   outline: transparent;
+   position: relative;
+   user-select: none;
+   -webkit-user-select: none;
+   touch-action: manipulation;
+}
+
+.button-49:after {
+    --slice-0: inset(50% 50% 50% 50%);
+    --slice-1: inset(80% -6px 0 0);
+    --slice-2: inset(50% -6px 30% 0);
+    --slice-3: inset(10% -6px 85% 0);
+    --slice-4: inset(40% -6px 43% 0);
+    --slice-5: inset(80% -6px 5% 0);
+
+    content: 'CONNECTING';
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: linear-gradient(45deg, transparent 3%, #00E6F6 3%, #00E6F6 5%, #FF013C 5%);
+    text-shadow: -3px -3px 0px #F8F005, 3px 3px 0px #00E6F6;
+    clip-path: var(--slice-0);
+}
+
+.button-49:hover:after {
+    animation: 1s glitch;
+    animation-timing-function: steps(2, end);
+}
+
+.button-49:active {
+    animation: 1s glitch;
+    animation-timing-function: steps(2, end);
+}
+
+
+@keyframes glitch {
+    0% {
+        clip-path: var(--slice-1);
+        transform: translate(-20px, -10px);
+    }
+    10% {
+        clip-path: var(--slice-3);
+        transform: translate(10px, 10px);
+    }
+    20% {
+        clip-path: var(--slice-1);
+        transform: translate(-10px, 10px);
+    }
+    30% {
+        clip-path: var(--slice-3);
+        transform: translate(0px, 5px);
+    }
+    40% {
+        clip-path: var(--slice-2);
+        transform: translate(-5px, 0px);
+    }
+    50% {
+        clip-path: var(--slice-3);
+        transform: translate(5px, 0px);
+    }
+    60% {
+        clip-path: var(--slice-4);
+        transform: translate(5px, 10px);
+    }
+    70% {
+        clip-path: var(--slice-2);
+        transform: translate(-10px, 10px);
+    }
+    80% {
+        clip-path: var(--slice-5);
+        transform: translate(20px, -10px);
+    }
+    90% {
+        clip-path: var(--slice-1);
+        transform: translate(-10px, 0px);
+    }
+    100% {
+        clip-path: var(--slice-1);
+        transform: translate(0);
+    }
+}
+
+@media (min-width: 768px) {
+    .button-49,
+    .button-49:after {
+        width: 200px;
+        height: 86px;
+        line-height: 88px;
+    }
+}
+
+
+.sections {
+    min-height: 100vh;
+    min-width: 100vw;
+    padding: 25px;
+    font-size: 2rem;
+}
+
+.section-title {
+    width: 20vw;
+    text-align: center;
+}
+
+.section-body {
+    width: 80vw;
+    font-family: var(--clean);
+    font-size: 1.5rem;
+    padding-bottom: 5vh;
+    overflow: hidden;
+}
+
+.img-container {
+    min-width: 40vw;
+    display: block;
+}
+
+
+#about, #contact span {
+    font-size: calc(60vh/7);
+}
+
+#portfolio span {
+    font-size: calc(60vh/9);
+}
+
+
+body, html {
+    height: 100%;
+    margin: 0;
+}
+
 
