--- a/css/styles.css
+++ b/css/styles.css
@@ -83,7 +83,7 @@ html {
     max-width: 55vw;
 }
 
-#menu button {
+#menu a {
     margin: 0 10px;
     font-size: 1.5rem;
     padding: 10px 15px;
@@ -130,12 +130,6 @@ html {
     animation: 1s glitch;
     animation-timing-function: steps(2, end);
 }
-
-.button-49:active {
-    animation: 1s glitch;
-    animation-timing-function: steps(2, end);
-}
-
 
 @keyframes glitch {
     0% {
